--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   padding: 12px 0;
   background: linear-gradient(135deg, #a2ded0, #b8e994);
   overflow-wrap: break-word;
+  padding-right: 5%;
 
 }
 
@@ -64,6 +65,7 @@ input {
   height: 600px;
   border-radius: 0 15px 15px 0;
   margin-top: 10px;
+  padding-right: 5px;
   transform-origin: left;
   transform-style: preserve-3d;
   transform: rotateY(0deg);
@@ -119,23 +121,29 @@ input {
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 30px;
   margin-bottom: 20px;
+  margin-left: 43%;
 }
 
 p {
-  font-size: 17px;
-  margin-right: auto;
-  margin-bottom: 40px;
+  padding-right: 10px;
   overflow-wrap: break-word;
+  font-size: 20px;
+  margin-left: 33%;
+  margin-right: 5%;
+  margin-bottom: 40px;
   word-wrap: break-word;
-  padding: 10px 0;
+  
 
 }
 
 .next-btn {
+  position: absolute;
+  bottom: 100px;
+  right: 10%;
   padding: 10px 20px;
-  background-color: #6c5ce7;
+  background-color: #610018;
   color: white;
   border: none;
   cursor: pointer;
@@ -174,6 +182,11 @@ p {
   background-image: url('https://example.com/adventure.jpg');
   z-index: 4;
 }
+#page7 {
+  background-image: url('https://example.com/adventure.jpg');
+  z-index: 3;
+}
+
 
 #checkbox-cover:checked ~ .book {
   transform: translateX(200px);
