--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ input {
 .page {
   position: absolute;
   background-color: white;
-  width: 850px;
-  height: 600px;
+  width: 100%;
+  height: 100%;
   border-radius: 0 15px 15px 0;
   margin-top: 10px;
   padding-right: 5px;
@@ -244,7 +244,7 @@ p {
 
 
 .page.hidden {
-  transform: rotateY(-180deg);
+  transform: rotateY(180deg);
   opacity: 0;
 }
 
@@ -254,6 +254,6 @@ p {
 }
 
 .page.leaving {
-  transform: rotateY(180deg);
+  transform: rotateY(-180deg);
   opacity: 0;
 }
